--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Annonces Immobilières Région Lyonnaise | Immo Lyon</title>
-    <meta name="description" content="Trouvez les meilleurs appartements, maisons, locaux commerciaux et terrains dans la région lyonnaise. Achetez, vendez et louez des biens immobiliers facilement sur Immo Lyon." />
+    <title>Trocadimmo | Immobilier Région Lyonnaise</title>
+    <meta name="description" content="Trouvez les meilleurs appartements, maisons, locaux commerciaux et terrains dans la région lyonnaise. Achetez, vendez et louez des biens immobiliers facilement sur Trocadimmo." />
     <meta name="keywords" content="immobilier, appartements, maisons, commercial, terrain, Lyon, Rhône, France, acheter, vendre, louer" />
-    <meta name="author" content="Immo Lyon" />
+    <meta name="author" content="Trocadimmo" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#0f766e" />
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
@@ -18,7 +18,7 @@
     <link rel="robots" href="/public/robots.txt" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Annonces Immobilières Région Lyonnaise | Immo Lyon" />
+    <meta property="og:title" content="Trocadimmo | Immobilier Région Lyonnaise" />
     <meta property="og:description" content="Trouvez les meilleurs biens immobiliers dans la région lyonnaise. Appartements, maisons, locaux commerciaux et terrains en un seul endroit." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/public/apple-touch-icon.png" />
@@ -28,7 +28,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@immo_lyon" />
-    <meta name="twitter:title" content="Annonces Immobilières Région Lyonnaise | Immo Lyon" />
+    <meta name="twitter:title" content="Trocadimmo | Immobilier Région Lyonnaise" />
     <meta name="twitter:description" content="Trouvez les meilleurs biens immobiliers dans la région lyonnaise. Appartements, maisons, locaux commerciaux et terrains en un seul endroit." />
     <meta name="twitter:image" content="/public/apple-touch-icon.png" />
 
@@ -37,7 +37,7 @@
       {
         "@context": "https://schema.org",
         "@type": "RealEstateAgent",
-        "name": "Immo Lyon",
+        "name": "Trocadimmo",
         "url": "https://immo-lyon.fr/",
         "logo": "https://immo-lyon.fr/public/apple-touch-icon.png",
         "description": "Immobilier dans la région lyonnaise - appartements, maisons, locaux commerciaux et terrains",
